# KinetixVerse

./: README.md  pyproject.toml
meshes/: data.glb
notebook/: track.ipynb
output/sarthak/: sarthak.db
src/: test.py  track and segment.py  track.py  trajectory.py
